--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     colors, and structure to build clean and responsive websites.</p></div>
 </div>
 <div class="glass">
-    <img src="tools.png.png" width="50px">
+    <img src="tools.png." width="50px">
     <div><h1>Tools</h1>
     <p id="skilld">I work with Visual Studio Code for writing and<br>
     organizing my HTML and CSS projects, and I use Canva<br>
@@ -88,5 +88,6 @@
 </footer>
 </body>
 </html>
+
 
 
