--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      expanding my technical skill set. I enjoy working on projects that challenge my creativity and<br>
       help me grow as a developer. With a strong foundation in programming and a keen interest in AI,<br>
        I am committed to building impactful solutions and developing myself into a skilled technology professional.<br></p></div>
-    <div><img src="srikarann.jpg" width="200px"></div>
+    <div><<img src="https://drive.google.com/uc?id=1KXWlaywFYiHoFlRPAVWjtNce5ctNSCja" alt="My Image" width="200px"></div>
 </div>
 <div id="set">
 <div class="glass">
@@ -88,6 +88,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
